# php_html2img_ext

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  bootstrap.sh  build-linux.sh  build-windows-mingw.sh  build-windows-vs17.bat  config.m4  config.w32  html2img.sln  html2img.vcxproj  run_sample.php
demos/: cli_sample.php  html2img_cli.php  output_html_test.html
patches/: litehtml-static.patch
php-8.2.29-devel-vs16-x64/: build-windows-vs17.bat
php-8.2.29-devel-vs16-x64/include/main/: config.pickle.h  config.w32.h
php-8.2.29-devel-vs16-x64/lib/: libwebpdecoder_a.lib  libwebpdemux_a.lib  php_bz2.lib  php_com_dotnet.lib  php_curl.lib  php_dba.lib  php_dl_test.lib  php_enchant.lib  php_exif.lib  php_ffi.lib  php_fileinfo.lib  php_ftp.lib  php_gd.lib  php_gettext.lib  php_gmp.lib  php_imap.lib  php_intl.lib  php_ldap.lib  php_mbstring.lib  php_mysqli.lib  php_oci8_19.lib  php_odbc.lib  php_opcache.lib  php_openssl.lib  php_pdo_firebird.lib  php_pdo_mysql.lib  php_pdo_oci.lib  php_pdo_odbc.lib  php_pdo_pgsql.lib  php_pdo_sqlite.lib  php_pgsql.lib  php_shmop.lib  php_snmp.lib  php_soap.lib  php_sockets.lib  php_sodium.lib  php_sqlite3.lib  php_sysvshm.lib  php_tidy.lib  php_xsl.lib  (+2 more)
php-8.2.29-devel-vs16-x64/libgd-2.3.3/src/: config.h
php-8.2.29-devel-vs16-x64/script/: ext_deps.js  phpize.js  run-tests.php
php-8.2.29-devel-vs16-x64/src/: cache.hpp  config.m4  config.nice.bat  config.w32  configure.bat  configure.js  gd_container.cpp  gd_container.hpp
php-8.4.10-devel-vs17-x64/: build-windows-vs17.bat
php-8.4.10-devel-vs17-x64/gdbuild/: libgd.exp  libgd.lib  libgd_a.lib  libsharpyuv_a.lib  php_dba.lib  php_ffi.lib  php_ftp.lib  php_gettext.lib  php_gmp.lib  php_mbstring.lib  php_opcache.lib  php_pdo_firebird.lib  php_shmop.lib  php_snmp.lib  php_soap.lib  php_sockets.lib  php_sqlite3.lib  php_sysvshm.lib  php_zend_test.lib
php-8.4.10-devel-vs17-x64/gdbuild/tests/: Maketests.vc  testlist.txt
php-8.4.10-devel-vs17-x64/include/Zend/: zend_language_parser.h
php-8.4.10-devel-vs17-x64/include/main/: config.pickle.h  config.w32.h
php-8.4.10-devel-vs17-x64/lib/: freetype.lib  gif.lib  giflib5.lib  libpixman-1.lib  libwebp_a.lib  php8.lib  php8ts.lib  php_bz2.lib  php_com_dotnet.lib  php_curl.lib  php_dl_test.lib  php_enchant.lib  php_exif.lib  php_fileinfo.lib  php_gd.lib  php_intl.lib  php_ldap.lib  php_mysqli.lib  php_odbc.lib  php_openssl.lib  php_pdo_mysql.lib  php_pdo_odbc.lib  php_pdo_pgsql.lib  php_pdo_sqlite.lib  php_pgsql.lib  php_sodium.lib  php_tidy.lib  php_xsl.lib  php_zip.lib  zlibstatic.lib
php-8.4.10-devel-vs17-x64/libgd-2.3.3/src/: config.h  gd.h  gd_filename.c
php-8.4.10-devel-vs17-x64/libgd-2.3.3/windows/: Makefile.vc
php-8.4.10-devel-vs17-x64/script/: config.phpize.js  ext_deps.js  ext_pickle.js  phpize.js
php-8.4.10-devel-vs17-x64/src/: Makefile  Makefile.objects  cache.cpp  cache.hpp  cairo_canvas.cpp  cairo_canvas.hpp  cairo_container.cpp  cairo_container.hpp  config.w32  configure.js  file_interface.hpp  ft_cache.cpp  gd_container.cpp  gd_container.hpp  path_utils.cpp  path_utils.hpp  php_html2img.cpp  php_html2img_arginfo.h  rml_cairo_renderer.cpp  rml_cairo_renderer.hpp  rml_file_interface.cpp  rml_file_interface.hpp
php-8.4.10-devel-vs17-x64/src/x64/Release/: ft_cache.sbr  gd_canvas.sbr  php_html2img.dll.res  php_html2img.exp  php_html2img.lib  vc140.idb
php-8.4.10-devel-vs17-x64/src/x64/Release/resp/: HTML2IMG_GLOBAL_OBJS.txt  PHP_GLOBAL_OBJS.txt
src/: cache.cpp  ft_cache.cpp  ft_cache.hpp  gd_canvas.cpp  gd_canvas.hpp  php_html2img.cpp
tests/: cairo_backend_test.cpp  concurrent_cache.php  gd_backend_test.cpp  relative_font.php
